gac_sb/objects/Note_De_Frais_Recap__c.object
<CustomObject>
    <description>AppNDF : récapitulatif mensuelle de toutes les notes de frais (et dépenses notes de frais) d&apos;un collaborateur pour un mois donné</description>
    <fields>
        <fullName>Approbateur_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approbateur 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Recap_notes_de_frais</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approbateur_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approbateur 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Recap_notes_de_frais2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approbateur_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approbateur 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Recap_notes_de_frais3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Collaborateur__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collaborateur</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Collaborateur_Notes_De_Frais</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_De_Validation__c</fullName>
        <label>Date de validation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Debut_De_Periode__c</fullName>
        <label>Date début de période</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_de_traitement_comptabilite__c</fullName>
        <label>Date de traitement comptabilité</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_fin_de_periode__c</fullName>
        <label>Date fin de période</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Etape__c</fullName>
        <label>Etape</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>En cours</fullName>
                </value>
                <value>
                    <fullName>Soumis pour approbation</fullName>
                </value>
                <value>
                    <fullName>Refusé</fullName>
                </value>
                <value>
                    <fullName>Validé</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nombre_De_Dejeuners__c</fullName>
        <label>Nombre de déjeuners</label>
        <summarizedField>Note_De_Frais__c.Nombre_De_Dejeuners__c</summarizedField>
        <summaryForeignKey>Note_De_Frais__c.Recap_Note_De_Frais__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Numero_Compte_Autres_HT__c</fullName>
        <label>Numéro Compte Autres TVA récupérable</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_Compte_Autres_TTC__c</fullName>
        <label>Numéro Compte Autres TVA non récupérable</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pays__c</fullName>
        <label>Pays</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FR</fullName>
                </value>
                <value>
                    <fullName>BR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Periode__c</fullName>
        <formula>TEXT(YEAR(Date_fin_de_periode__c)) &amp;  &apos;-&apos; &amp; 
IF(MONTH( Date_fin_de_periode__c ) &lt; 10, &apos;0&apos; &amp; TEXT(MONTH( Date_fin_de_periode__c )), TEXT(MONTH( Date_fin_de_periode__c )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Période</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Periode_label__c</fullName>
        <formula>CASE(MONTH( Date_fin_de_periode__c ), 
1, $Label.Mois_Janvier,
2, $Label.Mois_Fevrier,
3, $Label.Mois_Mars,
4, $Label.Mois_Avril,
5, $Label.Mois_Mai,
6, $Label.Mois_Juin,
7, $Label.Mois_Juillet,
8, $Label.Mois_Aout,
9, $Label.Mois_Septembre,
10, $Label.Mois_Octobre,
11, $Label.Mois_Novembre,
12, $Label.Mois_Decembre,&apos;&apos;) 
 &amp; &apos; &apos; &amp;  TEXT(YEAR(Date_fin_de_periode__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Période label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Autres_HT__c</fullName>
        <label>Total autres (TVA récupérable)</label>
        <summarizedField>Note_De_Frais__c.Total_Autres_HT__c</summarizedField>
        <summaryForeignKey>Note_De_Frais__c.Recap_Note_De_Frais__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Avion__c</fullName>
        <label>Total avion</label>
        <summarizedField>Note_De_Frais__c.Total_Avion__c</summarizedField>
        <summaryForeignKey>Note_De_Frais__c.Recap_Note_De_Frais__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Carburant__c</fullName>
        <label>Total carburant</label>
        <summarizedField>Note_De_Frais__c.Total_Carburant__c</summarizedField>
        <summaryForeignKey>Note_De_Frais__c.Recap_Note_De_Frais__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Dejeuner__c</fullName>
        <label>Total déjeuner</label>
        <summarizedField>Note_De_Frais__c.Total_Dejeuner__c</summarizedField>
        <summaryForeignKey>Note_De_Frais__c.Recap_Note_De_Frais__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Diner__c</fullName>
        <label>Total dîner</label>
        <summarizedField>Note_De_Frais__c.Total_Diner__c</summarizedField>
        <summaryForeignKey>Note_De_Frais__c.Recap_Note_De_Frais__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Frais_Kilometrique__c</fullName>
        <label>Total frais kilométriques</label>
        <summarizedField>Note_De_Frais__c.Total_Frais_Kilometrique__c</summarizedField>
        <summaryForeignKey>Note_De_Frais__c.Recap_Note_De_Frais__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_HT__c</fullName>
        <label>Total HT</label>
        <summarizedField>Note_De_Frais__c.Total_HT__c</summarizedField>
        <summaryForeignKey>Note_De_Frais__c.Recap_Note_De_Frais__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Hotel_Nuitee__c</fullName>
        <label>Total hôtel (nuitée)</label>
        <summarizedField>Note_De_Frais__c.Total_Hotel_Nuitee__c</summarizedField>
        <summaryForeignKey>Note_De_Frais__c.Recap_Note_De_Frais__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Invitation_client__c</fullName>
        <label>Total Invitation client</label>
        <summarizedField>Note_De_Frais__c.Total_Invitation_client__c</summarizedField>
        <summaryForeignKey>Note_De_Frais__c.Recap_Note_De_Frais__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Location_Vehicule__c</fullName>
        <label>Total location véhicule</label>
        <summarizedField>Note_De_Frais__c.Total_Location_Vehicule__c</summarizedField>
        <summaryForeignKey>Note_De_Frais__c.Recap_Note_De_Frais__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Parking__c</fullName>
        <label>Total Parking, métro, bus</label>
        <summarizedField>Note_De_Frais__c.Total_Parking__c</summarizedField>
        <summaryForeignKey>Note_De_Frais__c.Recap_Note_De_Frais__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Peage_Parking_Metro_Bus__c</fullName>
        <label>Total péage</label>
        <summarizedField>Note_De_Frais__c.Total_Peage_Parking_Metro_Bus__c</summarizedField>
        <summaryForeignKey>Note_De_Frais__c.Recap_Note_De_Frais__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Petit_Dejeuner__c</fullName>
        <label>Total petit déjeuner</label>
        <summarizedField>Note_De_Frais__c.Total_Petit_Dejeuner__c</summarizedField>
        <summaryForeignKey>Note_De_Frais__c.Recap_Note_De_Frais__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Poste__c</fullName>
        <label>Total poste</label>
        <summarizedField>Note_De_Frais__c.Total_Poste__c</summarizedField>
        <summaryForeignKey>Note_De_Frais__c.Recap_Note_De_Frais__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_TTC__c</fullName>
        <label>Total TTC</label>
        <summarizedField>Note_De_Frais__c.Total_TTC__c</summarizedField>
        <summaryForeignKey>Note_De_Frais__c.Recap_Note_De_Frais__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_TVA__c</fullName>
        <label>Total TVA</label>
        <summarizedField>Note_De_Frais__c.Total_TVA__c</summarizedField>
        <summaryForeignKey>Note_De_Frais__c.Recap_Note_De_Frais__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Taxi__c</fullName>
        <label>Total taxi</label>
        <summarizedField>Note_De_Frais__c.Total_Taxi__c</summarizedField>
        <summaryForeignKey>Note_De_Frais__c.Recap_Note_De_Frais__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Train__c</fullName>
        <label>Total train</label>
        <summarizedField>Note_De_Frais__c.Total_Train__c</summarizedField>
        <summaryForeignKey>Note_De_Frais__c.Recap_Note_De_Frais__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total remboursé</label>
        <summarizedField>Note_De_Frais__c.Total__c</summarizedField>
        <summaryForeignKey>Note_De_Frais__c.Recap_Note_De_Frais__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_autres_TTC__c</fullName>
        <label>Total autres (TVA non récupérable)</label>
        <summarizedField>Note_De_Frais__c.Total_Autres_TTC__c</summarizedField>
        <summaryForeignKey>Note_De_Frais__c.Recap_Note_De_Frais__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Traitement_comptabilite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Traitement comptabilité</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Traitement_Notes_De_Frais</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type_approbation_NDF__c</fullName>
        <label>Type approbation NDF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Récap notes de frais</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Periode__c</columns>
        <columns>Type_approbation_NDF__c</columns>
        <columns>Date_De_Validation__c</columns>
        <columns>Etape__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Approbateur_1__c</columns>
        <columns>Approbateur_2__c</columns>
        <columns>Approbateur_3__c</columns>
        <columns>Date_fin_de_periode__c</columns>
        <columns>Date_Debut_De_Periode__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Recap_Non_Validee</fullName>
        <columns>Collaborateur__c</columns>
        <columns>NAME</columns>
        <columns>Total__c</columns>
        <columns>Periode__c</columns>
        <columns>Etape__c</columns>
        <columns>Type_approbation_NDF__c</columns>
        <columns>Approbateur_1__c</columns>
        <columns>Approbateur_2__c</columns>
        <columns>Approbateur_3__c</columns>
        <columns>Date_De_Validation__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Date_Debut_De_Periode__c</columns>
        <columns>Date_fin_de_periode__c</columns>
        <columns>Pays__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Etape__c</field>
            <operation>notEqual</operation>
            <value>Validé</value>
        </filters>
        <label>Récap Non Validée</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>NDF-R-{00000}</displayFormat>
        <label>Num Récap</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Récap notes de frais</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>